--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@ body {
   /* font weight */
   --fw-regular: 400;
   --fw-medium: 500;
-  --fw-bold: 700;
+  --fw-bold: 800;
 
   /* text */
   --text-primary: #222;
